project1/main.tf
########## vpc code

resource "aws_vpc" "main" {
  cidr_block ="10.0.0.0/16"
  tags ={
    name="${var.project-name}-vpc"
  }
}

############## subnet code

resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block ="10.0.1.0/24"
    map_public_ip_on_launch = true

    tags ={
        name ="${var.project-name}-public-subnet"
    }
  
}

################ internet gateway

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}

############### route table

resource "aws_route_table" "public_route" {
  
  vpc_id = aws_vpc.main.id
  route{
    cidr_block="0.0.0.0/0"
    gateway_id=aws_internet_gateway.igw.id

  }
  
}

############## route table assosciation

resource "aws_route_table_association" "public_rta"{
    subnet_id =aws_subnet.public.id
    route_table_id= aws_route_table.public_route.id
  
}

############# security group

resource "aws_security_group" "web_sg" {
  name = "web_sg"
  description = "allow HTTP and SSH"
  vpc_id = aws_vpc.main.id

  ingress{
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
  }
  ingress{
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
  }
  egress {
    from_port =0
    to_port =0
    protocol ="-1"
    cidr_blocks = [ "0.0.0.0/0" ]
  }
}

############### EC2 instance

resource "aws_instance" "web" {
  ami           = var.ami_id
  instance_type = var.instance-type
  subnet_id = aws_subnet.public.id
  vpc_security_group_ids = [ aws_security_group.web_sg.id ]
   user_data = <<-EOF
    #!/bin/bash
    sudo apt-get update -y
    sudo apt-get install -y apache2
    sudo systemctl start apache2
    sudo systemctl enable apache2
    echo "Hello Sarath, Apache installed via Terraform!" > /var/www/html/index.html
  EOF

tags={
    name="${var.project-name}-server"

}
}
